--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <button id="upload">Upload File</button> 
       
     <!-- Adding Individual Renderer Process JS File -->
-    <script src="index.js"></script> 
-
+    <!-- <script src="chromedriver.js"></script> -->
+	<script src="index.js"></script>
 </body>
 </html>
