--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,10 @@
 <body>
 	<h1>Мониторинг ликвидационных процедур</h1>
 	<p><textarea id="inns"></textarea></p>
-    <button id="upload">Upload File</button> 
+    <button id="handle">Обработать данные</button> 
       
     <!-- Adding Individual Renderer Process JS File -->
-     <script src="chromedriver.js"></script> 
+    <!-- <script src="chromedriver.js"></script> -->
 	<script src="index.js"></script>
 </body>
 </html>
