--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<h1>Мониторинг ликвидационных процедур</h1>
-	<p><textarea id="inns"></textarea></p>
+	<p><textarea rows="50" cols="140" id="inns"></textarea></p>
     <button id="handle">Обработать данные</button> 
       
     <!-- Adding Individual Renderer Process JS File -->
