--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,8 @@
 <body>
 	<h1>Мониторинг ликвидационных процедур</h1>
 	<p><textarea rows="50" cols="140" id="inns"></textarea></p>
-    <button id="handle">Обработать данные</button> 
+	<button id="handle">Загрузить выписки</button> 
+	<button id="pdf">Обработать выписки</button> 	
       
     <!-- Adding Individual Renderer Process JS File -->
     <!-- <script src="chromedriver.js"></script> -->
