--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 	<p><textarea rows="40" cols="70" id="inns"></textarea></p>
 	<button id="handle">Загрузить выписки</button> 
 	<button id="pdf">Обработать выписки</button> 	
+	<button id="delete">Удалить загруженные выписки</button> 
       
     <!-- Adding Individual Renderer Process JS File -->
     <!-- <script src="chromedriver.js"></script> -->
